--- a/css/style.css
+++ b/css/style.css
@@ -150,33 +150,28 @@ body {
 
 #letter {
 	display: none;
-	top:50%;
-	transform: translateY(-30%);
-	/* right: 30px;
-	right: 30px;
-	bottom:30px; */
-	margin: 30px;
-	position: absolute;
-	background-position: center;
 	background: url("../imgs/letter.jpg") no-repeat;
-	position: relative;
-	background-size: contain;
-	/* width: 100%; */
 	height: 600px;
-	z-index: 9999;
+	width: 600px;
+	background-size: contain;
+	position: absolute;
+	transform: translate(-50%,-50%);
+	top: 50%;
+	left: 50%;
 }
 
 .message {
 	position: absolute;
 	font-family: "UVNGiayTrang", sans-serif;
 	font-weight: bold;
-	font-size: 17px;
-	line-height: 1.35em;
+	font-size: 25px;
+	line-height: 50px;
 	color: red;
-	top: 70px;
-	line-height: 24px;
-	left: 56px;
-	max-width: 250px;
+	top: 120px;
+	line-height: 40px;
+	left: 100px;
+	max-width: 420px;
+	text-align: justify;
 	word-wrap: break-word;
 }
 
@@ -375,6 +370,22 @@ body {
 	top: -300px;
 	font-size: 50px;
 }
-#panda{
-	
-}
+@media only screen and (max-width: 600px) {
+	#letter {
+		width: 400px;
+		height: 400px;
+		display: none;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-50%,-50%);
+	  align-items: center;
+	  justify-content: center;
+	}
+	.message{
+		top: 78px;
+		font-size: 17px;
+		left: 60px;
+		line-height: 27px;
+		max-width: 270px;
+	}
+  }
